# CompoundExtremes-OAX-MHW

./: .gitignore  README.md  figures.ipynb  figures.py  pyproject.toml  scratch.ipynb
data/: masks.nc  sources.yaml
interactive/: AGENT.md  build_figure.py  figure6_code.py  preprocess.py
scripts/: 0_fetch_datasets.py  1_compute_extremes.py  2_baseline_sensitivities.py  3_calc_spatial_stats.py  4_calc_event_stats.py  5_compute_carbsys_drivers.py  6_figures_mo.py  calc_event_stats.py  calc_spatial_stats.py  figures.ipynb  figures_mo.py  plot_extreme_event_drivers.py  plot_global_extreme_drivers.py  plot_sensitivities.py  plotting.mplstyle  test_timeseries_plot.py  threshold_sensitivities.py
src/compoundx_figs/: __init__.py  carbsys_sensitivities.py  compound_extremes.py  convert.py  data_models.py  disk_cache.py  extreme_detection.py  extreme_summary_stats.py  io.py  utils.py
src/compoundx_figs/vis/: __init__.py  geo.py  line.py  scatter_extras.py  utils.py
