[project]
name = "compoundx_figs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lukegre", email = "lukegre@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "copernicusmarine>=2.4.0",
    "dask>=2026.3.0",
    "fsspec>=2026.2.0",
    "hvplot>=0.12.2",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "marimo>=0.23.3",
    "matplotlib>=3.10.8",
    "munch>=4.0.0",
    "netcdf4>=1.7.4",
    "numbagg>=0.9.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyco2sys>=1.8.3.4",
    "pykdtree>=1.4.3",
    "python-dotenv>=1.2.2",
    "s3fs>=2026.2.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "xarray>=2026.2.0",
    "zarr>=3.1.6",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.8",
]

[tool.marimo.runtime]
pythonpath = ["src"]
